Refactor video and playlist APIs for profile support
Updated MusicUiApi and PlaylistAPI to support profile-specific playlists and improved playlist access control. Refactored VideoAPI and VideoUiApi to use VideoDTOs, streamlined video streaming logic, and removed legacy Video model. Added new detectors and models for episodes, movies, and media files. Updated controllers and services to support new video and playlist data structures. Modified UI templates and JS to reflect backend changes.