@@ -1,12 +1,22 @@
 package Services;
 
-import Models.Video;
+import Models.Episode;
+import Models.MediaFile;
+import Models.Movie;
+import Models.Season;
+import Models.Show;
+import io.quarkus.panache.common.Page;
+import io.quarkus.panache.common.Sort;
 import jakarta.enterprise.context.ApplicationScoped;
-import jakarta.transaction.Transactional;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
-import jakarta.persistence.TypedQuery;
+import jakarta.transaction.Transactional;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @ApplicationScoped
@@ -15,134 +25,179 @@ public class VideoService {
     @PersistenceContext
     private EntityManager em;
 
-    // Inner record for paginated video results
-    public record PaginatedVideos(List<Video> videos, long totalCount) {}
+    public record VideoDTO(
+        Long id, // MediaFile ID
+        String path,
+        String type, // "Movie" or "Episode"
+        String title,
+        String seriesTitle,
+        Integer seasonNumber,
+        Integer episodeNumber,
+        String episodeTitle,
+        Integer releaseYear,
+        int durationSeconds,
+        int width,
+        int height
+    ) {}
 
-    @Transactional
-    public void save(Video video) {
-        if (video.id == null || em.find(Video.class, video.id) == null) {
-            em.persist(video);
-        } else {
-            em.merge(video);
+    private VideoDTO episodeToDTO(Episode episode, MediaFile mf) {
+        Show show = episode.season != null ? episode.season.show : null;
+        String seriesTitle = show != null ? show.name : "Unknown Show";
+        String title = String.format("%s - S%02dE%02d", seriesTitle, episode.seasonNumber, episode.episodeNumber);
+        if (episode.title != null && !episode.title.isBlank()) {
+            title += " - " + episode.title;
         }
+        return new VideoDTO(mf.id, mf.path, "Episode", title, seriesTitle, episode.seasonNumber, episode.episodeNumber, episode.title, null, mf.durationSeconds, mf.width, mf.height);
     }
-
-    @Transactional(value = Transactional.TxType.REQUIRES_NEW)
-    public Video persistVideoInNewTx(Video video) {
-        if (video.id == null || em.find(Video.class, video.id) == null) {
-            em.persist(video);
-        } else {
-            em.merge(video);
-        }
-        em.flush(); // Ensure changes are written to DB within this transaction
-        return video;
-    }
-
-    @Transactional
-    public void delete(Video video) {
-        if (video != null) {
-            Video managed = em.contains(video) ? video : em.merge(video);
-            em.remove(managed);
-        }
-    }
-
-    @Transactional(Transactional.TxType.SUPPORTS)
-    public Video find(Long id) {
-        return em.find(Video.class, id);
+    
+    private VideoDTO movieToDTO(Movie movie, MediaFile mf) {
+         return new VideoDTO(mf.id, mf.path, "Movie", movie.title, null, null, null, null, movie.releaseYear, mf.durationSeconds, mf.width, mf.height);
     }
 
     @Transactional
-    public List<Video> findAll() {
-        return em.createQuery("SELECT v FROM Video v", Video.class)
-                .getResultList();
+    public VideoDTO find(Long id) {
+        MediaFile mf = MediaFile.findById(id);
+        if (mf == null || !"video".equals(mf.type)) {
+            return null;
+        }
+
+        Movie movie = Movie.find("videoPath", mf.path).firstResult();
+        if (movie != null) {
+            return movieToDTO(movie, mf);
+        }
+
+        Episode episode = Episode.find("videoPath", mf.path).firstResult();
+        if (episode != null) {
+            return episodeToDTO(episode, mf);
+        }
+
+        return null;
+    }
+    
+    @Transactional
+    public List<VideoDTO> findAll() {
+        List<VideoDTO> videos = new ArrayList<>();
+        Map<String, MediaFile> mfMap = MediaFile.<MediaFile>streamAll().collect(Collectors.toMap(mf -> mf.path, Function.identity()));
+
+        Movie.<Movie>streamAll().forEach(movie -> {
+            MediaFile mf = mfMap.get(movie.videoPath);
+            if (mf != null) {
+                videos.add(movieToDTO(movie, mf));
+            }
+        });
+        
+        Episode.<Episode>streamAll().forEach(episode -> {
+            MediaFile mf = mfMap.get(episode.videoPath);
+            if (mf != null) {
+                videos.add(episodeToDTO(episode, mf));
+            }
+        });
+        
+        return videos;
     }
 
-    // New method to find videos by a list of IDs
-    public List<Video> findByIds(List<Long> ids) {
+    @Transactional
+    public List<VideoDTO> findByIds(List<Long> ids) {
         if (ids == null || ids.isEmpty()) {
-            return List.of();
+            return Collections.emptyList();
         }
-        // Ensure the order of results matches the order of IDs in the input list
-        // This is important for queue management
-        String query = "SELECT v FROM Video v WHERE v.id IN :ids";
-        List<Video> results = em.createQuery(query, Video.class)
-                               .setParameter("ids", ids)
-                               .getResultList();
+        List<MediaFile> mediaFiles = MediaFile.list("id in ?1", ids);
+        if (mediaFiles.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        Map<String, MediaFile> mfMap = mediaFiles.stream().collect(Collectors.toMap(mf -> mf.path, Function.identity()));
         
-        // Manual sorting to preserve the order of input IDs
-        // This is O(N log N) or O(N*M) depending on map implementation, but necessary
-        // if the database doesn't guarantee order for IN clause.
-        java.util.Map<Long, Video> videoMap = results.stream()
-                .collect(Collectors.toMap(video -> video.id, video -> video, (existing, replacement) -> existing));
+        List<VideoDTO> results = new ArrayList<>();
+        Movie.<Movie>stream("videoPath in ?1", mfMap.keySet()).forEach(movie -> {
+             MediaFile mf = mfMap.get(movie.videoPath);
+             if (mf != null) results.add(movieToDTO(movie, mf));
+        });
         
+        Episode.<Episode>stream("videoPath in ?1", mfMap.keySet()).forEach(episode -> {
+            MediaFile mf = mfMap.get(episode.videoPath);
+            if (mf != null) results.add(episodeToDTO(episode, mf));
+        });
+
+        Map<Long, VideoDTO> dtoMap = results.stream().collect(Collectors.toMap(VideoDTO::id, Function.identity()));
         return ids.stream()
-                  .map(videoMap::get)
-                  .filter(java.util.Objects::nonNull)
+                  .map(dtoMap::get)
+                  .filter(Objects::nonNull)
                   .collect(Collectors.toList());
     }
+    
+    public record PaginatedVideos(List<VideoDTO> videos, long totalCount) {}
 
-
-    public List<Video> findByMediaType(String mediaType) {
-        return em.createQuery("SELECT v FROM Video v WHERE v.mediaType = :mediaType ORDER BY v.seriesTitle, v.releaseYear, v.seasonNumber, v.episodeNumber", Video.class)
-                .setParameter("mediaType", mediaType)
-                .getResultList();
-    }
-
-    // Modified method for paginated lookup, returning PaginatedVideos record
     public PaginatedVideos findPaginatedByMediaType(String mediaType, int page, int limit) {
-        // Ensure page and limit are valid
-        if (page < 1) page = 1; // Page numbers are 1-based
-        if (limit <= 0) limit = 50; // Default limit
+        if (page < 1) page = 1;
+        Page p = Page.of(page - 1, limit);
 
-        long totalCount = countByMediaType(mediaType);
+        if ("Movie".equalsIgnoreCase(mediaType)) {
+            List<Movie> movies = Movie.findAll(Sort.by("title")).page(p).list();
+            long totalCount = Movie.count();
+            Map<String, MediaFile> mfMap = MediaFile.<MediaFile>list("path in ?1", movies.stream().map(m -> m.videoPath).collect(Collectors.toList()))
+                .stream().collect(Collectors.toMap(mf -> mf.path, Function.identity()));
+            List<VideoDTO> dtos = movies.stream().map(m -> movieToDTO(m, mfMap.get(m.videoPath))).filter(Objects::nonNull).collect(Collectors.toList());
+            return new PaginatedVideos(dtos, totalCount);
+        }
         
-        // Calculate offset (first result) for 0-based indexing by JPA
-        int offset = (page - 1) * limit;
+        if ("Episode".equalsIgnoreCase(mediaType)) {
+            List<Episode> episodes = Episode.findAll(Sort.by("season.show.name").and("seasonNumber").and("episodeNumber")).page(p).list();
+            long totalCount = Episode.count();
+            Map<String, MediaFile> mfMap = MediaFile.<MediaFile>list("path in ?1", episodes.stream().map(e -> e.videoPath).collect(Collectors.toList()))
+                .stream().collect(Collectors.toMap(mf -> mf.path, Function.identity()));
+            List<VideoDTO> dtos = episodes.stream().map(e -> episodeToDTO(e, mfMap.get(e.videoPath))).filter(Objects::nonNull).collect(Collectors.toList());
+            return new PaginatedVideos(dtos, totalCount);
+        }
 
-        TypedQuery<Video> query = em.createQuery(
-                "SELECT v FROM Video v WHERE v.mediaType = :mediaType ORDER BY v.seriesTitle, v.releaseYear, v.seasonNumber, v.episodeNumber",
-                Video.class);
-        query.setParameter("mediaType", mediaType);
-        query.setFirstResult(offset);
-        query.setMaxResults(limit);
-        
-        List<Video> videos = query.getResultList();
-        return new PaginatedVideos(videos, totalCount);
+        // Fallback for null or other mediaTypes: just return movies for now.
+        List<Movie> movies = Movie.findAll(Sort.by("title")).page(p).list();
+        long totalCount = Movie.count() + Episode.count(); // More accurate total
+        Map<String, MediaFile> mfMap = MediaFile.<MediaFile>list("path in ?1", movies.stream().map(m -> m.videoPath).collect(Collectors.toList()))
+            .stream().collect(Collectors.toMap(mf -> mf.path, Function.identity()));
+        List<VideoDTO> dtos = movies.stream().map(m -> movieToDTO(m, mfMap.get(m.videoPath))).filter(Objects::nonNull).collect(Collectors.toList());
+        return new PaginatedVideos(dtos, totalCount);
     }
-
-    // New method to count total items for pagination (already exists, but keeping for clarity)
-    public long countByMediaType(String mediaType) {
-        return em.createQuery("SELECT COUNT(v) FROM Video v WHERE v.mediaType = :mediaType", Long.class)
-                .setParameter("mediaType", mediaType)
-                .getSingleResult();
-    }
-
+    
     public List<String> findAllSeriesTitles() {
-        return em.createQuery("SELECT DISTINCT v.seriesTitle FROM Video v WHERE v.mediaType = 'Episode' AND v.seriesTitle IS NOT NULL ORDER BY v.seriesTitle", String.class)
-                .getResultList();
+        List<String> titles = Show.streamAll(Sort.by("name")).map(s -> ((Show)s).name).collect(Collectors.toList());
+        System.out.println("DEBUG: All series titles in database: " + titles);
+        return titles;
     }
 
     public List<Integer> findSeasonNumbersForSeries(String seriesTitle) {
-        return em.createQuery("SELECT DISTINCT v.seasonNumber FROM Video v WHERE v.seriesTitle = :seriesTitle AND v.mediaType = 'Episode' AND v.seasonNumber IS NOT NULL ORDER BY v.seasonNumber", Integer.class)
-                .setParameter("seriesTitle", seriesTitle)
-                .getResultList();
-    }
-
-    public List<Video> findEpisodesForSeason(String seriesTitle, Integer seasonNumber) {
-        return em.createQuery("SELECT v FROM Video v WHERE v.seriesTitle = :seriesTitle AND v.seasonNumber = :seasonNumber AND v.mediaType = 'Episode' ORDER BY v.episodeNumber", Video.class)
-                .setParameter("seriesTitle", seriesTitle)
-                .setParameter("seasonNumber", seasonNumber)
-                .getResultList();
-    }
-
-    @Transactional
-    public Video findByPath(String path) {
-        try {
-            return em.createQuery("SELECT v FROM Video v WHERE v.path = :path", Video.class)
-                    .setParameter("path", path)
-                    .getSingleResult();
-        } catch (jakarta.persistence.NoResultException e) {
-            return null;
+        System.out.println("DEBUG: Looking for show with name: '" + seriesTitle + "'");
+        Show show = Show.find("name", seriesTitle).firstResult();
+        if (show == null) {
+            System.out.println("DEBUG: Show not found in database");
+            return Collections.emptyList();
         }
+        System.out.println("DEBUG: Found show: " + show.name);
+        List<Integer> seasons = Season.stream("show", Sort.by("seasonNumber"), show).map(s -> ((Season)s).seasonNumber).collect(Collectors.toList());
+        System.out.println("DEBUG: Found seasons: " + seasons);
+        return seasons;
+    }
+
+    public List<VideoDTO> findEpisodesForSeason(String seriesTitle, Integer seasonNumber) {
+        Show show = Show.find("name", seriesTitle).firstResult();
+        if (show == null) return Collections.emptyList();
+        Season season = Season.find("show = ?1 and seasonNumber = ?2", show, seasonNumber).firstResult();
+        if (season == null) return Collections.emptyList();
+        
+        List<Episode> episodes = Episode.list("season", Sort.by("episodeNumber"), season);
+        Map<String, MediaFile> mfMap = MediaFile.<MediaFile>list("path in ?1", episodes.stream().map(e -> e.videoPath).collect(Collectors.toList()))
+            .stream().collect(Collectors.toMap(mf -> mf.path, Function.identity()));
+
+        return episodes.stream()
+                       .map(e -> episodeToDTO(e, mfMap.get(e.videoPath)))
+                       .filter(Objects::nonNull)
+                       .collect(Collectors.toList());
+    }
+    
+    @Transactional
+    public VideoDTO findByPath(String path) {
+        MediaFile mf = MediaFile.find("path", path).firstResult();
+        if (mf == null) return null;
+        return find(mf.id);
     }
 }
